src/objects/Insight_Atom__c.object
<CustomObject>
    <fields>
        <fullName>Atom__c</fullName>
        <externalId>true</externalId>
        <label>Atom</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insight_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insight Chapter</label>
        <referenceTo>Insight_Chapter__c</referenceTo>
        <relationshipLabel>Insight Atoms</relationshipLabel>
        <relationshipName>Insight_Atoms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insight__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insight</label>
        <referenceTo>Insight__c</referenceTo>
        <relationshipLabel>Insight Atoms</relationshipLabel>
        <relationshipName>Insight_Atoms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Insight Atom</label>
    <nameField>
        <displayFormat>IA {0}</displayFormat>
        <label>Insight Atom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Atoms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>